--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
             </div>
             <div class="menuToggle">
                 <div class="menu">
-                    <a input type="button" onClick="document.getElementById('experience').scrollIntoView();">
+                    <a input type="button" onClick="document.getElementById('aboutmesec').scrollIntoView();">
+                        <li>About Me</li>
+                    </a>
+                    <a input type="button" onClick="document.getElementById('experiences').scrollIntoView();">
                         <li>Experience</li>
                     </a>
                     <a input type="button" onClick="document.getElementById('projects').scrollIntoView();">
                         <li>Projects</li>
-                    </a>
-                    <a input type="button" onClick="document.getElementById('goals').scrollIntoView();">
-                        <li>Goals</li>
                     </a>
                     <a input type="button" onClick="document.getElementById('contact').scrollIntoView();">
                         <li>Contact</li>
@@ -42,9 +42,9 @@
             </div>
         </div>
         <div id="navigation" class="navigation">
-            <a input type="button" onClick="document.getElementById('experience').scrollIntoView();">Experience</a>
+            <a input type="button" onClick="document.getElementById('aboutmesec').scrollIntoView();">About Me</a>
+            <a input type="button" onClick="document.getElementById('experiences').scrollIntoView();">Experience</a>
             <a input type="button" onClick="document.getElementById('projects').scrollIntoView();">Projects</a>
-            <a input type="button" onClick="document.getElementById('goals').scrollIntoView();">Goals</a>
             <a input type="button" onClick="document.getElementById('contact').scrollIntoView();">Contact</a>
             <a href="Lieth Shehadeh's Resume Comp Sci.pdf" target="_blank">Resume</a>
         </div>
@@ -74,51 +74,150 @@
                 </div>
             </div>
         </div> -->
-        <div id="projects" class="section"><a>Experience</a></div>
-        <div class="projects">
-            <div class="project">
+        <div id="aboutmesec" class="section"><a>About Me</a></div>
+        <div id="aboutme" class="aboutme">
+            <div id="aboutmecontainer" class="aboutmecontainer">
+                <div class="metitles">Who am I?</div>
+                <div class="whoareyou">My name is Lieth Shehadeh, I am currently a 4th year student in the Computer Science
+                    Honours program at York University. I am from Jordan, and I love to learn about astronomy and
+                    different philosophical views on my own time. I enjoy playing video games and Soccer with my
+                    friends when I find the time. My unique strengths include, but are not limited to, my adaptability
+                    and my responsibility. I grew up in Al Ain, United Arab Emirates until I was 10 years old, then I
+                    lived the rest of my life here in Mississauga, Ontario. I’ve lived most of my life in environments
+                    I would call quite fortunate, I believe what truly shaped me into who I am is my parents and
+                    friends. My parents taught me what is right and wrong as well as how to be independent. I
+                    believe I have made very good decisions in my life when choosing friends, which has led me to
+                    making very kind and dependable friends. I chose York University as I was searching for a co-op
+                    and found that many people suggested York’s co-op program. I have never really found anyone
+                    to be inspiring other than my father. My dad has always amazed me, especially in how
+                    independent he is. I learned how to be independent from him.
+                </div>
+                <div class="metitles">Recent Placement Reflection: Mondelēz International </div>
+                <div class="reflection">Currently I work at Mondelez International as a Maintenance Co-op. My supervisor
+                    Santiago Munera, the Maintenance Co-Leader, and I chose that my learning goal for this
+                    placement was to get familiarized with the Mondelez food manufacturing process and develop
+                    new methods to any approach to optimize the process. Although this is a difficult objective to
+                    quantify, we’ve decided that the best way to measure my growth would be to determine how
+                    many hours of work I can automate and how much money I can save the company through
+                    optimization of processes. To determine if I was successful, we can test any scripts I create to see
+                    the time saved as opposed to doing the tasks manually, we can also do some simple calculations
+                    to determine how much more money my new method generates as opposed to the previous
+                    approach.
+                    
+                    So far into the placement, I have learned many things. I first started by helping coworkers
+                    in the office and getting to know them. I’ve realized that all my coworkers are quite nice and
+                    helpful, so I am now comfortable with asking for help or anything if I ever need it. I helped
+                    around with some printing jobs as well as some commissioning for some products. Simple but
+                    irrelevant stuff so far, but I am having fun.
+                    
+                    I began using SAP which is a relational database and I’ve become quite proficient in it. I
+                    have started working on a project, which involves me reorganizing and standardizing the SAP
+                    equipment tree. This helps make everyone’s work much easier as the database becomes much
+                    more organized in relation to the reality of the equipment’s states. I have become proficient
+                    enough to be able to write scripts automating tedious tasks for PM Managers, saving them many
+                    hours daily and many more yearly. I’ve created scripts to automate daily revisions done for every
+                    weekday and every day of the weekend. I also created a script to automate the printing and
+                    assigning of work orders which was a process taking up to an hour or two from 2-3 members of
+                    the maintenance team.
+                    </div>
+                <!-- <div class="artifact"><img src="rawImage.jpg"></div> -->
+                <div class="metitles">Explanation of artifact</div>
+                <div class="explanation">Although some might find this image boring, I find it scary, beautiful, inspiring, and extremely
+                    interesting. Before choosing to go pursue computer science I initially wanted to become an
+                    astronomer. Astronomy has always interested me, and I believe it has helped me realize that this
+                    world is beautiful even in the simplest things. I may not be in the field of astronomy; however,
+                    my goal is to become a programmer for some space agency. Even though I may not directly
+                    interact with outer space, I would love to be someone who has contributed to the exploration of
+                    it. This world is so vast and has so much of it yet to be explored or understood, I can call it
+                    anything but boring, I am in love with it. I find the idea that there is so much to be understood
+                    and the fact that there is so much yet to be seen unbelievably interesting. It has introduced me to
+                    the side of me that loves to learn and understand all kinds of concepts, complicated or simple.</div>
+                <div class="goals"></div>
+            </div>
+        </div>
+        <div id="experiences" class="section"><a>Experience</a></div>
+        <div class="experiences">
+            <div class="experience">
                 <div class="name">
                     <a>Mondelēz International</a>
                 </div>
-                <div class="languages">
+                <div class="languages"><ul>
+                    <li>Automation</li>
+                    <li>SAP</li>
+                    <li>VBS</li>
+                    <li>Excel</li>
+                    <li>VBA</li>
+                    </ul>
                 </div>
-                <div class="description"><a></a>
+                <div class="description"><a>Jan. 2024 - Present</a>
+                    <div id="mondelezimg" class="mondelezimg"><img src="1626627771721.png"></div>
+                    <a>• Created SAP scripts using VBS to automate daily tasks such as revisions, work orders, etc
+                    • Updated the SAP database standards, as well as the reorganization of the equipment tree
+                    • Relabeled of equipment on AutoCAD models as well as relabeling physical equipment
+                    • Observing machines to find potential for optimization
+                    • Creating macros to automate data visualization</a>
                 </div>
             </div>
             <div class="hborder"></div>
-            <div class="project">
+            <div class="experience">
                 <div class="name">
                     <a>MacEwan University</a>
                 </div>
-                <div class="languages">
+                <div class="languages"><ul>
+                    <li>ReactJS</li>
+                    <li>Python</li>
+                    <li>MeteorJS</li>
+                    <li>SQL</li>
+                    <li>FastAPI</li>
+                    </ul>
                 </div>
-                <div class="description">
-                    <a></a>
-                </div>
-            </div>
-            <div class="hborder"></div>
-            <div class="project">
-                <div class="name">
-                    <a>eWorx Technology</a>
-                </div>
-                <div class="languages">
-                </div>
-                <div class="description">
-                    <a></a>
+                <div class="description"><a>Jan. 2024 - Present    
+                </a>
+                    <div id="mondelezimg" class="macewanimg"><img src="MacEwanUniIMG.png"></div>
+                    <a>• Designed a database system to store data and built preventative measures against SQL Injection
+                        • Created an algorithm to speed up data generation by 10x without hindering user experience</a>
                 </div>
             </div>
             <div class="hborder"></div>
-            <div class="project">
+            <div class="experience">
+                <div class="name"><a>eWorx Technology</a>
+                </div>
+                <div class="languages"><ul>
+                    <li>JavaScript</li>
+                    <li>ReactJS</li>
+                    <li>MongoDB</li>
+                    <li>Python</li>
+                    <li>MeteorJS</li>
+                    <li>Django</li>
+                    <li>SQL</li>
+                    <li>FastAPI</li>
+                    </ul>
+                </div>
+                <div class="description"><a>Jan. 2024 - Present</a>
+                <div id="mondelezimg" class="eworximg"><img src="eworx.png"></div>
+                    <a>• Developed a tool which generates datasets for an educational web application alongside 3 other groups
+                        • Redesigned the web application, eliminating redundant code, reducing the complexity by 60%, and making it
+                        much more modular and professional for future workers</a>
+                </div>
+            </div>
+            <div class="hborder"></div>
+            <div class="experience">
                 <div class="name">
                     <a>Fossil</a>
                 </div>
-                <div class="languages">
+                <div class="languages"><ul>
+                    <li>Communication</li>
+                    <li>Teamwork</li>
+                    <li>organization</li>
+                    </ul>
                 </div>
-                <div class="description">
-                    <a></a>
+                <div class="description"><a>Jan. 2024 - Present</a><div id="mondelezimg" class="fossilimg"><img src="Fossil.png"></div><a>• Repaired watches and sold accessories such as watches, bags, and jewelry to 100+ customers a day
+                    • Had to communicate with coworkers to ensure all sales and services went smoothly
+                    </a>
                 </div>
             </div>
         </div>
+
         <div id="projects" class="section"><a>Projects</a></div>
         <div class="projects">
             <div class="project">
@@ -146,8 +245,8 @@
                     <li>Python</li>
                     </ul>
                 </div>
-                <div class="description">
-                    <a></a>
+                <div class="description"><a>• A Python application that uses a slightly modified version of the pyamaze library to visually demonstrate
+                        mazesolving algorithms. Currently demonstrates DFS and soon to add 3+ more algorithms for comparison</a>
                 </div>
             </div>
             <div class="hborder"></div>
@@ -163,8 +262,8 @@
                     <li>SQL</li>
                     </ul>
                 </div>
-                <div class="description">
-                    <a></a>
+                <div class="description"><a>• Using SQL and Python to scrape data and give the user access to 1M+ m ovies from the IMDB database. Proving
+                    the user with the ability to save the movie information and their opinion on it safely for future reference</a>
                 </div>
             </div>
             <div class="hborder"></div>
@@ -183,12 +282,9 @@
                 </div>
             </div>
         </div>
-        <div id="goals" class="goals">
-        </div>
-        <div id="skills" class="skills">
-        </div>
         <div id="contact" class="contactsection"><a>Contact Information</a></div>
         <div id="contact" class="contact">
+            <a href="Lieth Shehadeh's Resume Comp Sci.pdf"><div>Resume: Lieth Shehadeh</div></a>
             <a href="https://www.linkedin.com/in/lieths/"><div>Linkedin: LiethS</div></a>
             <a href="https://github.com/LiethS"><div>Github: LiethS</div></a>
             <div>Email: Lieth.munther@gmail.com</div>
